--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>5.2.12.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+
     </dependencies>
 
 </project>
